<resources>
    <string name="app_name">Medicoom</string>
    <string name="email">email</string>
    <string name="greeting">Добро пожаловать в Медикум!</string>
    <string name="password">пароль</string>
    <string name="no_acc_quest">Ещё нет аккаунта?</string>
    <string name="reg_then"><u>Зарегистрируйтесь</u></string>
    <string name="login">Войти</string>
    <string name="go_without_reg"><u>Продолжить без регистрации</u></string>
    <string name="registration">Регистрация</string>
    <string name="name_surname">Имя Фамилия</string>
    <string name="repeat_pass">повторите пароль</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="mail_sended">Вам на почту было отправлено письмо для подтверждения аккаунта.</string>
    <string name="please_verify">Пожалуйста, перейдите по ссылке и подтвердите аккаунт</string>
    <string name="avtorize">Авторизоваться</string>
    <string name="today">Сегодня</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="settings">Настройки</string>
    <string name="farmacy">Аптечка</string>
    <string name="treatment">Лечение</string>
    <string name="history">История</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Название</string>
    <string name="dosage">Дозировка</string>
    <string name="num_of_tablets">Всего имеется таблеток/порций</string>
    <string name="good_until">Препарат годен до</string>
    <string name="remind_me_when">Напомнить \nкогда останется</string>
    <string name="tablets_or_portions">таблеток или порций</string>
    <string name="save">Сохранить</string>
    <string name="you_want_med">Вы точно хотите удалить лекарство?</string>
    <string name="you_want_app">Вы точно хотите перестать принимать лекарство и УДАЛИТЬ назначение?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="med_delete">Удаление лекарства</string>
    <string name="app_delete">Удаление назначения</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="remove_date">Убрать срок годности</string>
    <string name="active">Активное</string>
    <string name="archive">Архив</string>
    <string name="dont_remind">Не уведомлять</string>
    <string name="pause">Пауза</string>
    <string name="to_archive">В архив</string>
    <string name="stop_get">Прекратить приём</string>
    <string name="start_date">Дата начала приёма</string>
    <string name="how_long_to_get">Сколько времени принимать</string>
    <string name="forever">Постоянно</string>
    <string name="for_some_time">В течение определённого времени</string>
    <string name="overall_duration">Общая длительность приёма (дней)</string>
    <string name="how_much_a_day">Сколько раз в день принимать</string>
    <string name="choose_farmacy">Выберите лекарство из списка</string>
    <string name="begin_get">Начать принимать лекарство</string>
    <string name="time_of_get">Время приёма</string>
    <string name="graphic">График приёма</string>
    <string name="every_day">Каждый день</string>
    <string name="by_week">По дням недели</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>
    <string name="Once_at_some_days">Раз в несколько дней</string>
    <string name="in_how_much_days">Раз во сколько дней</string>
    <string name="how_to_get">Как принимать</string>
    <string name="before">Перед едой</string>
    <string name="after_eat">После еды</string>
    <string name="personal">Свой вариант</string>
    <string name="num_of_tablets_at_once">Количество таблеток или порций за 1 приём</string>
    <string name="send_notific">Присылать уведомления о приёме</string>
    <string name="continue_get">Продолжить</string>
    <string name="restart">Возобновить</string>
    <string name="you_are_getting_med">Вы принимаете лекарство:</string>
    <string name="rest_to_get">Осталось принимать ещё</string>
    <string name="on_pause_description">Поставить на паузу (не присылать уведомления и не показывать на главном экране)</string>
    <string name="comment_to_day">Комментарий ко дню</string>
    <string name="comment_to_got">Комментарий к приёму</string>
    <string name="is_got">Лекарство принято</string>
    <string name="go_to_date">Перейти к дате</string>
    <string name="thankyou">Спасибо за доверие этому приложению :)</string>
    <string name="logout">Выйти из аккаунта</string>

</resources>