<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/greeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_inverseOnSurface"
    tools:context=".GreetingActivity">

    <TextView
        android:id="@+id/greeting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:text="@string/greeting"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/greeting_title"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_layout"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_below="@+id/password_layout"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        android:layout_centerHorizontal="true"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:layout_margin="8dp">
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/to_reg_layout"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_rect"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="start"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/no_acc_quest"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <TextView
            android:id="@+id/to_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/reg_then"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/md_theme_primary" />
    </LinearLayout>
    <TextView
        android:id="@+id/no_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/go_without_reg"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/md_theme_primary"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="16dp"
        android:background="@drawable/rounded_rect"
        android:textAlignment="center"/>
</RelativeLayout>