<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".WaitVerifideActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:text="@string/mail_sended"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/please_verify"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/md_theme_onSurfaceVariant" />

        <View
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:background="@drawable/envelope">
        </View>

        <Button
            android:id="@+id/wait_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/avtorize">
        </Button>
    </LinearLayout>
</ScrollView>