<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_inverseOnSurface"
    tools:context=".fragments.ChangeTodayAppointmentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="top"
            android:background="@color/md_theme_surface"
            app:titleTextAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            app:titleTextColor="@color/md_theme_onSurface"
            tools:title="Магний" />

        <include
            android:id="@+id/got_time"
            layout="@layout/time_input" />
        <include
            android:id="@+id/fake_comment"
            layout="@layout/fake_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/comment_to_got">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/is_got"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/is_got" />

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>

    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="50dp"
        android:width="200dp"
        android:text="@string/save" />
</FrameLayout>