<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_alignParentBottom="true">

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomBar"
        style="@style/Widget.MaterialComponents.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/md_theme_surfaceContainerLowest"
        app:contentInsetStart="0dp"
        app:fabAlignmentMode="center"
        app:fabCradleMargin="8dp"
        app:fabCradleRoundedCornerRadius="18dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingStart="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true">

                <LinearLayout
                    android:id="@+id/menuToday"
                    style="@style/menu_linearLayout"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/menu_ImageView"
                        android:layout_height="match_parent"
                        android:src="@drawable/event_available" />

                    <TextView
                        style="@style/menu_textView"
                        android:text="@string/today" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menuFarmacy"
                    style="@style/menu_linearLayout"
                    android:layout_toEndOf="@+id/menuToday"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/menu_ImageView"
                        android:layout_height="match_parent"
                        android:src="@drawable/medical_services" />

                    <TextView
                        style="@style/menu_textView"
                        android:text="@string/farmacy" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingEnd="8dp"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/menuTreatment"
                    style="@style/menu_linearLayout"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/menuHistory"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/menu_ImageView"
                        android:layout_height="match_parent"
                        android:src="@drawable/list_alt" />

                    <TextView
                        style="@style/menu_textView"
                        android:text="@string/treatment" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menuHistory"
                    style="@style/menu_linearLayout"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/menu_ImageView"
                        android:layout_height="match_parent"
                        android:src="@drawable/analytics" />

                    <TextView
                        style="@style/menu_textView"
                        android:text="@string/history" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:contentDescription="TODO"
        android:foreground="@drawable/sos_btn"
        app:layout_anchor="@id/bottomBar"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
